--- a/index.html
+++ b/index.html
@@ -13,28 +13,26 @@
         <div class="big-img"></div>
         <div class="carousel">
             <div class="slide">
-                <img class="slide-img" src="photos/1-87.jpg" alt="">
-                <img class="slide-img" src="photos/1-14.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_165102_082.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170650_109.jpg" alt="">
-                <img class="slide-img" src="photos/1-59.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170245_418.jpg" alt="">
-                <img class="slide-img" src="photos/1-15.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170754_348.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170417_815.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170533_418.jpg" alt="">
+                <img class="slide-img" src="photos/1-87.webp" alt="img">
+                <img class="slide-img" src="photos/1-14.webp" alt="">
+                <img class="slide-img" src="photos/IMG_20250813_170650_109.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_165102_082.webp" alt="img">
+                <img class="slide-img" src="photos/1-59.webp" alt="img">
+                <img class="slide-img" src="photos/1-15.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170754_348.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170417_815.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170533_418.webp" alt="img">
             </div>
             <div class="slide">
-                <img class="slide-img" src="photos/1-87.jpg" alt="">
-                <img class="slide-img" src="photos/1-14.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_165102_082.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170650_109.jpg" alt="">
-                <img class="slide-img" src="photos/1-59.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170245_418.jpg" alt="">
-                <img class="slide-img" src="photos/1-15.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170754_348.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170417_815.jpg" alt="">
-                <img class="slide-img" src="photos/IMG_20250813_170533_418.jpg" alt="">
+                <img class="slide-img" src="photos/1-87.webp" alt="img">
+                <img class="slide-img" src="photos/1-14.webp" alt="">
+                <img class="slide-img" src="photos/IMG_20250813_170650_109.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_165102_082.webp" alt="img">
+                <img class="slide-img" src="photos/1-59.webp" alt="img">
+                <img class="slide-img" src="photos/1-15.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170754_348.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170417_815.webp" alt="img">
+                <img class="slide-img" src="photos/IMG_20250813_170533_418.webp" alt="img">
             </div>
         </div>
     </div>
