--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Happy Birthday</title>
 </head>
 
 <body>
@@ -38,6 +38,10 @@
     </div>
 
     <h1 class="neon-text">Happy Birthday, my love</h1>
+    <audio controls loop preload="metadata">
+        <source src="happy-birthday-2-version-166416.mp3" type="audio/mpeg">
+        <source src="happy-birthday-2-version-166416.mp3" type="audio/ogg">
+    </audio>
 </body>
 
 </html>
