--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <h1 class="neon-text">Happy Birthday, my love</h1>
-    <audio controls loop preload="metadata">
+    <audio class="audio" controls loop preload="metadata">
         <source src="happy-birthday-2-version-166416.mp3" type="audio/mpeg">
         <source src="happy-birthday-2-version-166416.mp3" type="audio/ogg">
     </audio>
